--- a/ApplicationTest/ApplicationTest.csproj
+++ b/ApplicationTest/ApplicationTest.csproj
@@ -25,7 +25,7 @@
   <ItemGroup>
     <ProjectReference Include="..\Application\Application.csproj" />
     <ProjectReference Include="..\Persistence\Persistence.csproj" />
-    <ProjectReference Include="..\UserData\UserTestingData.csproj" />
+    <ProjectReference Include="..\UserData\TestingData.csproj" />
   </ItemGroup>
 
 </Project>
