--- a/Endpoint.Site/appsettings.json
+++ b/Endpoint.Site/appsettings.json
@@ -7,8 +7,7 @@
   },
 
   "ConnectionStrings": {
-    "OnlineShopDb": "Data Source= .; Initial Catalog = OnlineShopDb; Integrated Security  = true ;",
-    "OnlineShopIdentityDb": "Data Source= .; Initial Catalog = OnlineShopIdentityDb; Integrated Security  = true ;"
+    "OnlineShopDb": "Data Source= .; Initial Catalog = OnlineShopDb; Integrated Security  = true ;"
   },
 
   "AllowedHosts": "*"
